# GOBC

./: README.md  gui.py  pyproject.toml  text_summarizer.py
files/: sample_doc1.docx
summarized_files/: summarized_text_2023-07-01_15-34-46.txt  summarized_text_2023-07-01_15-47-58.txt
